@@ -1,4 +1,4 @@
-# $Id: configure.in,v 1.31.2.1 2006-08-22 15:32:48 thep Exp $
+# $Id: configure.in,v 1.31.2.2 2006-08-29 15:20:04 thep Exp $
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.50)
@@ -13,7 +13,7 @@ AC_SUBST(VERSION)
 # Interfaces added:              CURRENT++  REVISION=0  AGE++
 # Interfaces changed/removed:    CURRENT++  REVISION=0  AGE=0
 LT_CURRENT=1
-LT_REVISION=0
+LT_REVISION=1
 LT_AGE=1
 AC_SUBST(LT_CURRENT)
 AC_SUBST(LT_REVISION)
