@@ -1,5 +1,13 @@
 2006-08-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* configure.in (LT_REVISION): Incremented library revision.
+
+	* src/thbrk/thbrk.c (brk_do): (Optimization) Do not contest best break 
+	when trie walking crashes in recover mode. It won't win recovery 
+	criterion anyway. Also got rid of one inner loop condition.
+
+2006-08-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/thbrk/thbrk.c (brk_recover): Do not try to recover after a
 	leading vowel.
 
@@ -1002,13 +1010,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.8 2006-08-29 06:28:38 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.9 2006-08-29 15:20:04 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.8 2006-08-29 06:28:38 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.9 2006-08-29 15:20:04 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
